tvb_slurm/job.210461.err
  File "/scratch/yxw190015/github/tvbdemos/tvb_slurm/sim2.py", line 49
    <<<<<<< HEAD
    ^
SyntaxError: invalid syntax
